--- a/play.html
+++ b/play.html
@@ -20,6 +20,7 @@
 
 <!-- Plyr.js JavaScript -->
 <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script>
     // Function to initialize video player with Telegram start_param
     function initPlayer() {
