--- a/play.html
+++ b/play.html
@@ -3,50 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Video Player</title>
+    <title>Terabox Video Player</title>
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+        }
+        .video-container {
+            position: relative;
+            max-width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
 
-    <div class="plyr__video-embed" id="player">
-        <iframe
-          id="videoFrame"
-          src=""
-          allowfullscreen
-          allowtransparency
-          allow="autoplay"
-        ></iframe>
-    </div>
+  <div class="video-container" id="videoContainer">
+    <video id="videoPlayer" playsinline controls muted>
+        <source id="videoSource" src="" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+  </div>
 
-<!-- Plyr.js JavaScript -->
-<script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
-<script>
-    // Function to initialize video player with Telegram start_param
-    function initPlayer() {
-        // Retrieve the start_param from the Telegram Web App
-        let startParam = window.Telegram.WebApp.initDataUnsafe.start_param;
+  <!-- Plyr.js JavaScript -->
+  <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script>
+      // Function to initialize video player with Telegram start_param
+      function initPlayer() {
+          // Retrieve the start_param from the Telegram Web App
+          const videoLink = window.Telegram.WebApp.initDataUnsafe.start_param;
 
-        // Check if startParam is not empty
-        if (startParam) {
-            const videoSrc = `https://www.1024terabox.com/sharing/embed?surl=${startParam}&autoplay=true&mute=false`;
-            document.getElementById('videoFrame').src = videoSrc;
+          // Check if videoLink is not empty
+          if (videoLink) {
+              // Set the video source
+              document.getElementById('videoSource').src = videoLink;
 
-            // Initialize Plyr
-            const player = new Plyr('#player iframe');
-        } else {
-            console.error('No start_param found in Telegram Web App data.');
-        }
-    }
+              // Initialize Plyr
+              const player = new Plyr('#videoPlayer');
 
-    // Ensure the Telegram WebApp API is loaded
-    window.onload = function() {
-        if (window.Telegram && window.Telegram.WebApp) {
-            initPlayer();
-        } else {
-            console.error('Telegram WebApp API not loaded.');
-        }
-    };
-</script>
+              // Load the new video source
+              player.source = {
+                  type: 'video',
+                  sources: [
+                      {
+                          src: videoLink,
+                          type: 'video/mp4'
+                      }
+                  ]
+              };
+          } else {
+              console.error('No start_param found in Telegram Web App data.');
+          }
+      }
+
+      // Ensure the Telegram WebApp API is loaded
+      window.onload = function() {
+          if (window.Telegram && window.Telegram.WebApp) {
+              initPlayer();
+          } else {
+              console.error('Telegram WebApp API not loaded.');
+          }
+      };
+  </script>
 </body>
 </html>
