--- a/play.html
+++ b/play.html
@@ -41,6 +41,9 @@
           // Retrieve the start_param from the Telegram Web App
           const videoLink = window.Telegram.WebApp.initDataUnsafe.start_param;
 
+          alert(videoLink);
+
+
           // Check if videoLink is not empty
           if (videoLink) {
               // Set the video source
