--- a/play.html
+++ b/play.html
@@ -64,6 +64,8 @@
         <div></div>
     </div>
 
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    
     <script>
         // Function to initialize loading and redirect
         function initLoading() {
